--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,10 @@
         "GitHub.copilot",
         "GitHub.copilot-chat",
         "bradlc.vscode-tailwindcss",
-        "ms-vscode.js-debug-nightly"
+        "ms-vscode.js-debug-nightly",
+        "usernamehw.errorlens",
+        "zhuangtongfa.Material-theme",
+        "akamud.vscode-theme-onelight"
       ]
     }
 },
