--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "dotenv": "^16.4.7",
     "immer": "^10.1.1",
     "lucide-react": "^0.468.0",
